# To-Do

./: CMakeLists.txt  Imagens.qrc  README.md  abrirnota.cpp  abrirnota.h  abrirnota.ui  bancoDoTodo.db  criar.cpp  criar.h  criar.ui  editar.cpp  editar.h  editar.ui  login.cpp  login.h  login.ui  pagina_inicial.cpp  pagina_inicial.h  pagina_inicial.ui  registrar.cpp  registrar.h  registrar.ui
